Create allowance for all users when creating new year
- creates allowance for every user based on his individual leave profile

- triggered by year becoming active(it is possible to create inactive year and later update it to active)

- fixes yearServiceTest

- to delete a year, it needs to be inactive and without any allowances assigned(it is possible only if user created inactive year and wants to delete it)